# stock_dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt  run.py  state_keys.py
.github/: PULL_REQUEST_TEMPLATE.md  board-artifacts.schema.json  board.schema.json  copilot-instructions.md  gate-profiles.schema.json  settings.json  settings.schema.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: analyst.agent.md  architect.agent.md  assessor.agent.md  developer.agent.md  impact-analyst.agent.md  manager.agent.md  planner.agent.md  reviewer.agent.md  test-designer.agent.md  test-verifier.agent.md  writer.agent.md
.github/agents/references/: board-integration-guide.md  common-constraints.md
.github/instructions/: common.instructions.md  javascript.instructions.md  python.instructions.md  test.instructions.md  typescript.instructions.md
.github/prompts/: assess.prompt.md  cleanup.prompt.md  model.prompt.md  plan.prompt.md  review.prompt.md  start.prompt.md  submit.prompt.md
.github/rules/: branch-naming.md  commit-message.md  development-workflow.md  error-handling.md  gate-profiles.json  git-preflight.md  issue-tracker-workflow.md  merge-policy.md  workflow-state.md  worktree-layout.md
.github/skills/analyze-and-plan/: SKILL.md
.github/skills/assess-project/: SKILL.md
.github/skills/cleanup-worktree/: SKILL.md
.github/skills/configure-model/: SKILL.md
.github/skills/execute-plan/: SKILL.md
.github/skills/generate-gitignore/: SKILL.md
.github/workflows/: ci.yml
components/: charts.py  copilot_client.py  data_loader.py  dl_analytics.py  dl_behavior.py  dl_health.py  dl_history.py  dl_holdings.py  dl_news.py  dl_prices.py  kpi_helpers.py  llm_analyzer.py  llm_cache.py  settings_store.py  tab_charts.py  tab_copilot.py  tab_health.py  tab_holdings.py  tab_insights.py  tab_monthly.py  trade_form.py  trade_impact.py  trade_writer.py  watchlist.py
docs/: code-review-2026-02-25.md  external-services.md
docs/architecture/: architect-review-2026-02-25.md  data-flow.md  glossary.md  module-map.md
src/core/: common.py  health_check.py  models.py  paths.py  return_estimate.py  ticker_utils.py
src/data/: embedding_client.py  graph_store.py  history_store.py  summary_builder.py  yahoo_client.py
static/: dashboard.css
tests/: conftest.py  test_behavior_foundation.py  test_core_models.py  test_core_portfolio.py  test_core_return_estimate.py  test_core_screening.py  test_dashboard_charts.py  test_dashboard_clear_cache.py  test_dashboard_copilot_client.py  test_dashboard_data_loader.py  test_dashboard_economic_news.py  test_dashboard_health_check.py  test_dashboard_llm_analyzer.py  test_dashboard_settings.py  test_dashboard_tab_insights.py  test_data_stores.py  test_data_yahoo_client.py  test_dl_behavior_retro_context.py  test_dl_behavior_timing.py  test_long_horizon_analytics.py  test_style_profile.py  test_timing_analysis.py  test_trade_form.py  test_trade_impact.py  test_trade_stats_extended.py  test_trade_writer.py  test_watchlist.py
tools/: calc_cash.py
tools/validate-github-config/: test_validate_config.py  validate_config.py
tools/validate-schemas/: validate_schemas.py
(+37 files in other folders)
