[project]
name = "stock_dashboard"
requires-python = ">=3.11"

# =====================================================================
# ruff — Python linter & formatter
# Why: 静的解析で型エラー・スタイル違反を早期検出
# How: Flake8 + isort + pyupgrade 等を統合した高速リンター
# =====================================================================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["components", "src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if (readability preference — separate conditions are clearer)
    "SIM105", # contextlib.suppress (explicit try/except is more readable)
    "SIM108", # use ternary operator (readability preference)
    "B905",   # zip strict (Python 3.10 compat)
    "RUF001", # ambiguous unicode (Japanese text)
    "RUF002", # ambiguous unicode (Japanese text)
    "RUF003", # ambiguous unicode (Japanese comments)
    "RUF012", # mutable class variable annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM300", "E402"]   # test files use sys.path before imports
"app.py" = ["E402"]                      # Streamlit path setup before imports
"components/*" = ["E402"]                # path setup before imports
"src/data/yahoo_client.py" = ["E402"]    # path setup before imports
"src/core/portfolio/*" = ["E402"]        # path setup before imports
"src/core/health_check.py" = ["E402"]    # late import for circular dependency
"src/data/graph/__init__.py" = ["F401", "RUF022"]  # re-export public API, intentional order

[tool.ruff.lint.isort]
known-first-party = ["components", "src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =====================================================================
# mypy — static type checker
# Why: 型エラーを早期検出し、コードの安全性を向上
# How: 段階的導入 — まず基本チェックから開始
# =====================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 段階的に true へ移行
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "components.data_loader",
    "components.llm_analyzer",
    "components.watchlist",
    "src.core.health_check",
    "src.core.portfolio.concentration",
    "src.core.portfolio.portfolio_manager",
    "src.core.return_estimate",
    "src.core.screening.indicators",
    "src.core.ticker_utils",
    "src.data.embedding_client",
    "src.data.graph.repository",
    "src.data.history_store",
    "src.data.yahoo_client",
]
ignore_errors = true

# =====================================================================
# pytest
# =====================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
